# Git-Editor

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  about.md  changelog.md  count_src_loc.bat  logo.pdn  mod.json  testing-checklist.md
docs/: building.md  index.md  known-issues.md  roadmap.md
docs/features/: README.md
docs/source/: README.md  core.md  diff.md  editor.md  hooks.md  identity.md  model.md  service.md  settings.md  sqlite.md  store.md  test.md  ui.md  util.md
src/: main.cpp
src/core/: ImportPlan.hpp
src/diff/: Delta.cpp  Delta.hpp  Differ.cpp  Differ.hpp
src/editor/: LevelKey.cpp  LevelKey.hpp  LevelStateIO.cpp  LevelStateIO.hpp
src/hooks/: EditorPauseLayerHook.cpp  ImportGdgeFlow.cpp  ImportGdgeFlow.hpp
src/identity/: Matcher.cpp  Matcher.hpp
src/model/: GdHeader.cpp  GdHeader.hpp  LevelParser.cpp  LevelParser.hpp  LevelState.hpp
src/service/: CommitSummaryBuilder.cpp  CommitSummaryBuilder.hpp  GdgeImportMerge.cpp  GdgeImportMerge.hpp  GdgeImportPlanner.cpp  GdgeImportPlanner.hpp  GitService.cpp  GitService.hpp  MergeService.cpp  MergeService.hpp  PackageReconstruction.cpp  PackageReconstruction.hpp  PendingCommit.hpp  PendingOps.hpp  ReconstructionService.cpp  ReconstructionService.hpp  Result.hpp  StateCache.cpp  StateCache.hpp
src/settings/: RunAutomatedTestSetting.cpp
src/store/: CommitSchema.cpp  CommitSchema.hpp  CommitStore.cpp  CommitStore.hpp  GdgeExport.cpp  GdgeExport.hpp  GdgePackage.cpp  GdgePackage.hpp  LevelKeyResolver.cpp  LevelKeyResolver.hpp
src/test/: AdvancedCollabTests.cpp  AutomatedTestHarness.cpp  AutomatedTestHarness.hpp  AutomatedTestRunner.cpp  AutomatedTestRunner.hpp  CheckoutTests.cpp  CollabTests.cpp  EdgeTests.cpp  GdgeImportExportTests.cpp  HistoryTests.cpp  ManualChecklistTests.cpp  RevertTests.cpp  SquashTests.cpp  TwoPhaseTests.cpp
src/ui/: CommitMessageLayer.cpp  CommitMessageLayer.hpp  DeltaInfoLayer.cpp  DeltaInfoLayer.hpp  HistoryActions.cpp  HistoryActions.hpp  HistoryCommitRow.cpp  HistoryCommitRow.hpp  HistoryFlows.cpp  HistoryLayer.cpp  HistoryLayer.hpp  HistoryList.cpp  LevelBrowserLayer.cpp  LevelBrowserLayer.hpp
src/ui/common/: GitUiActionRunner.hpp  PreparedEditorFlow.hpp  ScrollListPopup.cpp  ScrollListPopup.hpp  UiNodeLifecycle.hpp
src/ui/history/: HistoryDataSource.cpp  HistoryDataSource.hpp  HistorySelectionModel.hpp
src/ui/presentation/: DeltaColors.hpp  DeltaText.cpp  DeltaText.hpp  UiAction.hpp  UiText.cpp  UiText.hpp
src/util/: AsyncQueue.cpp  BlobCodec.cpp  BlobCodec.hpp  DbFlusher.cpp  DbFlusher.hpp  DbZip.cpp  DbZip.hpp  GitWorker.cpp  GitWorker.hpp  LevelKey.cpp  LevelKey.hpp  Parsing.cpp  PathUtf8.hpp  StateHash.cpp  StateHash.hpp  UiText.cpp  UiText.hpp
src/util/format/: Parsing.hpp  Shorten.hpp  StateHash.cpp  StateHash.hpp
src/util/io/: BlobCodec.cpp  BlobCodec.hpp  DbZip.cpp  DbZip.hpp  FileAtomic.cpp  FileAtomic.hpp  PathUtf8.hpp  TextFileUtf8.cpp  TextFileUtf8.hpp
